--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,7 +11,7 @@
   box-sizing: border-box; /* 1 */
   border-width: 0; /* 2 */
   border-style: solid; /* 2 */
-  border-color: #e5e7eb; /* 2 */
+  border-color: var(--gray-200); /* 2 */
 }
 
 ::before,
@@ -460,6 +460,9 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mt-_132 {
+  margin-top: 132px;
+}
 .flex {
   display: flex;
 }
@@ -469,14 +472,29 @@ video {
 .h-_700 {
   height: 700px;
 }
+.h-12 {
+  height: 3rem;
+}
 .w-full {
   width: 100%;
+}
+.w-_592 {
+  width: 592px;
+}
+.w-60 {
+  width: 15rem;
 }
 .max-w-_1140 {
   max-width: 1140px;
 }
+.flex-col {
+  flex-direction: column;
+}
 .items-center {
   align-items: center;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
@@ -487,12 +505,20 @@ video {
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-7 {
+  gap: 1.75rem;
+}
+.gap-9 {
+  gap: 2.25rem;
+}
+.rounded-_6 {
+  border-radius: 6px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
 .border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: var(--gray-200);
 }
 .border-red-400 {
   --tw-border-opacity: 1;
@@ -500,6 +526,9 @@ video {
 }
 .border-opacity-90 {
   --tw-border-opacity: 0.9;
+}
+.bg-green-100 {
+  background-color: var(--green-100);
 }
 .bg-hero-pattern {
   background-image: url('/public/img/Hero.png');
@@ -510,9 +539,16 @@ video {
 .bg-center {
   background-position: center;
 }
+.py-_6 {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.text-center {
+  text-align: center;
 }
 .text-sm {
   font-size: 0.875rem;
@@ -522,11 +558,32 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-_66 {
+  font-size: 66px;
+  line-height: 76px;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 .font-normal {
   font-weight: 400;
 }
+.font-semibold {
+  font-weight: 600;
+}
 .leading-_17\.26 {
   line-height: 17.26px;
+}
+.leading-5 {
+  line-height: 1.25rem;
+}
+.-tracking-_2 {
+  letter-spacing: -2px;
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-gray-100 {
   color: var(--gray-100);
@@ -535,6 +592,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
 }
+.text-gray-200 {
+  color: var(--gray-200);
+}
 .opacity-90 {
   opacity: 0.9;
 }
@@ -542,12 +602,30 @@ video {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 :root {
   --gray-100: rgba(77, 76, 74, 1);
+  --gray-200: rgba(65, 52, 45, 1);
+  --green-100: rgba(71, 99, 78, 1);
 }
 body {
   font-family: "Fraunces", serif;
+}
+.hover\:opacity-90:hover {
+  opacity: 0.9;
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
