--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,8 @@
 
 :root {
   --gray-100: rgba(77, 76, 74, 1);
+  --gray-200: rgba(65, 52, 45, 1);
+  --green-100: rgba(71, 99, 78, 1);
 }
 body {
   font-family: "Fraunces", serif;
