--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 :root {
+  /* Gray */
   --gray-100: rgba(77, 76, 74, 1);
   --gray-200: rgba(65, 52, 45, 1);
+  --gray-300: rgba(245, 241, 234, 1);
+
+  /* Green */
   --green-100: rgba(71, 99, 78, 1);
 }
 body {
