--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -460,17 +460,26 @@ video {
 .relative {
   position: relative;
 }
+.-top-4 {
+  top: -1rem;
+}
 .right-0 {
   right: 0px;
 }
 .-top-_202 {
   top: -202px;
 }
-.-top-4 {
-  top: -1rem;
-}
 .m-auto {
   margin: auto;
+}
+.m-10 {
+  margin: 2.5rem;
+}
+.m-8 {
+  margin: 2rem;
+}
+.m-5 {
+  margin: 1.25rem;
 }
 .mt-_73 {
   margin-top: 73px;
@@ -502,8 +511,14 @@ video {
 .mt-_112 {
   margin-top: 112px;
 }
+.mt-32 {
+  margin-top: 8rem;
+}
 .mt-_132 {
   margin-top: 132px;
+}
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .flex {
   display: flex;
@@ -519,6 +534,9 @@ video {
 }
 .h-12 {
   height: 3rem;
+}
+.h-_205 {
+  height: 205px;
 }
 .h-_700 {
   height: 700px;
@@ -568,14 +586,26 @@ video {
 .gap-9 {
   gap: 2.25rem;
 }
+.gap-7 {
+  gap: 1.75rem;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
 .rounded {
   border-radius: 0.25rem;
 }
 .rounded-_6 {
   border-radius: 6px;
 }
+.border {
+  border-width: 1px;
+}
 .border-b {
   border-bottom-width: 1px;
+}
+.border-t {
+  border-top-width: 1px;
 }
 .border-gray-200 {
   border-color: var(--gray-200);
@@ -583,6 +613,9 @@ video {
 .border-red-400 {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+.border-gray-300 {
+  border-color: var(--gray-300);
 }
 .border-opacity-90 {
   --tw-border-opacity: 0.9;
@@ -606,6 +639,10 @@ video {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-11 {
+  padding-top: 2.75rem;
+  padding-bottom: 2.75rem;
+}
 .text-center {
   text-align: center;
 }
@@ -628,6 +665,10 @@ video {
 .text-_66 {
   font-size: 66px;
   line-height: 76px;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-semibold {
   font-weight: 600;
