--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -364,7 +364,7 @@ video {
 [type='text'],[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select {
   appearance: none;
   background-color: #fff;
-  border-color: #6B7280;
+  border-color: var(--gray-500);
   border-width: 1px;
   border-radius: 0px;
   padding-top: 0.5rem;
@@ -390,7 +390,7 @@ video {
 }
 
 input::placeholder,textarea::placeholder {
-  color: #6B7280;
+  color: var(--gray-500);
   opacity: 1;
 }
 
@@ -403,7 +403,7 @@ input::placeholder,textarea::placeholder {
 }
 
 select {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='var(--gray-500)' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
   background-position: right 0.5rem center;
   background-repeat: no-repeat;
   background-size: 1.5em 1.5em;
@@ -437,7 +437,7 @@ select {
   width: 1rem;
   color: #1C64F2;
   background-color: #fff;
-  border-color: #6B7280;
+  border-color: var(--gray-500);
   border-width: 1px;
   --tw-shadow: 0 0 #0000;
 }
@@ -764,9 +764,6 @@ input[type="range"]::-ms-fill-lower {
 .absolute {
   position: absolute;
 }
-.relative {
-  position: relative;
-}
 .-top-4 {
   top: -1rem;
 }
@@ -778,6 +775,10 @@ input[type="range"]::-ms-fill-lower {
 }
 .m-auto {
   margin: auto;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 .mt-_73 {
   margin-top: 73px;
@@ -812,17 +813,23 @@ input[type="range"]::-ms-fill-lower {
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mt-10 {
+  margin-top: 2.5rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mt-10 {
-  margin-top: 2.5rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 .mt-_132 {
   margin-top: 132px;
 }
 .flex {
   display: flex;
+}
+.table {
+  display: table;
 }
 .grid {
   display: grid;
@@ -835,6 +842,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .h-_187 {
   height: 187px;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-4 {
   height: 1rem;
@@ -860,6 +870,18 @@ input[type="range"]::-ms-fill-lower {
 .w-_335 {
   width: 335px;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-_440 {
+  width: 440px;
+}
+.w-5 {
+  width: 1.25rem;
+}
+.w-28 {
+  width: 7rem;
+}
 .w-4 {
   width: 1rem;
 }
@@ -868,6 +890,12 @@ input[type="range"]::-ms-fill-lower {
 }
 .max-w-_1140 {
   max-width: 1140px;
+}
+.max-w-md {
+  max-width: 28rem;
+}
+.table-auto {
+  table-layout: auto;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -905,6 +933,9 @@ input[type="range"]::-ms-fill-lower {
 .gap-10 {
   gap: 2.5rem;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .gap-9 {
   gap: 2.25rem;
 }
@@ -932,6 +963,9 @@ input[type="range"]::-ms-fill-lower {
 .border-t {
   border-top-width: 1px;
 }
+.border-gray-300 {
+  border-color: var(--gray-300);
+}
 .border-gray-200 {
   border-color: var(--gray-200);
 }
@@ -939,14 +973,14 @@ input[type="range"]::-ms-fill-lower {
   --tw-border-opacity: 1;
   border-color: rgb(249 128 128 / var(--tw-border-opacity));
 }
-.border-gray-300 {
-  border-color: var(--gray-300);
-}
 .border-opacity-90 {
   --tw-border-opacity: 0.9;
 }
 .bg-green-200 {
   background-color: var(--green-200);
+}
+.bg-gray-500 {
+  background-color: var(--gray-500);
 }
 .bg-pink-100 {
   background-color: var(--pink-100);
@@ -975,6 +1009,10 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -983,9 +1021,17 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 2.75rem;
   padding-bottom: 2.75rem;
 }
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -1024,6 +1070,9 @@ input[type="range"]::-ms-fill-lower {
 .font-normal {
   font-weight: 400;
 }
+.font-bold {
+  font-weight: 700;
+}
 .leading-5 {
   line-height: 1.25rem;
 }
@@ -1036,6 +1085,9 @@ input[type="range"]::-ms-fill-lower {
 .text-gray-200 {
   color: var(--gray-200);
 }
+.text-gray-500 {
+  color: var(--gray-500);
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1046,6 +1098,9 @@ input[type="range"]::-ms-fill-lower {
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(249 128 128 / var(--tw-text-opacity));
+}
+.text-green-100 {
+  color: var(--green-100);
 }
 .opacity-90 {
   opacity: 0.9;
@@ -1074,6 +1129,7 @@ input[type="range"]::-ms-fill-lower {
   --gray-200: rgba(65, 52, 45, 1);
   --gray-300: rgba(245, 241, 234, 1);
   --gray-400: rgba(255, 252, 249, 1);
+  --gray-500: rgba(232, 228, 221, 1);
 
   /* Green */
   --green-100: rgba(71, 99, 78, 1);
@@ -1085,6 +1141,24 @@ input[type="range"]::-ms-fill-lower {
 body {
   font-family: "Fraunces", serif;
   background-color: var(--gray-400);
+}
+
+/* Table */
+/* Todo: add border radius to table */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+table tr th {
+  padding: 0.5rem 1rem;
+}
+table tr td {
+  padding: 1rem;
+  background-color: var(--gray-300);
+  font-size: 14px;
 }
 .hover\:cursor-pointer:hover {
   cursor: pointer;
@@ -1132,10 +1206,6 @@ body {
 
   .sm\:w-_592 {
     width: 592px;
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-2 {
