--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
   --gray-200: rgba(65, 52, 45, 1);
   --gray-300: rgba(245, 241, 234, 1);
   --gray-400: rgba(255, 252, 249, 1);
+  --gray-500: rgba(232, 228, 221, 1);
 
   /* Green */
   --green-100: rgba(71, 99, 78, 1);
@@ -19,4 +20,22 @@
 body {
   font-family: "Fraunces", serif;
   background-color: var(--gray-400);
+}
+
+/* Table */
+/* Todo: add border radius to table */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+table tr th {
+  padding: 0.5rem 1rem;
+}
+table tr td {
+  padding: 1rem;
+  background-color: var(--gray-300);
+  font-size: 14px;
 }
