--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -828,6 +828,9 @@ input[type="range"]::-ms-fill-lower {
 .mt-4 {
   margin-top: 1rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .flex {
   display: flex;
 }
@@ -1051,6 +1054,10 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 2.75rem;
   padding-bottom: 2.75rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1141,6 +1148,9 @@ input[type="range"]::-ms-fill-lower {
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(249 128 128 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  color: var(--gray-400);
 }
 .underline {
   text-decoration-line: underline;
@@ -1237,8 +1247,24 @@ table tr td {
     margin-top: 132px;
   }
 
+  .sm\:mt-_10 {
+    margin-top: 10px;
+  }
+
+  .sm\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .sm\:block {
     display: block;
+  }
+
+  .sm\:grid {
+    display: grid;
   }
 
   .sm\:hidden {
@@ -1255,6 +1281,14 @@ table tr td {
 
   .sm\:w-_592 {
     width: 592px;
+  }
+
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .sm\:w-_440 {
+    width: 440px;
   }
 
   .sm\:grid-cols-4 {
@@ -1275,6 +1309,14 @@ table tr td {
 
   .sm\:gap-4 {
     gap: 1rem;
+  }
+
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+
+  .sm\:gap-10 {
+    gap: 2.5rem;
   }
 
   .sm\:px-0 {
