feat(cart): display cart items

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
   --gray-300: rgba(245, 241, 234, 1);
   --gray-400: rgba(255, 252, 249, 1);
   --gray-500: rgba(232, 228, 221, 1);
+  --gray-600: rgba(233, 233, 233, 1);
 
   /* Green */
   --green-100: rgba(71, 99, 78, 1);
