--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -779,11 +779,11 @@ input[type="range"]::-ms-fill-lower {
 .top-0 {
   top: 0px;
 }
-.z-10 {
-  z-index: 10;
-}
 .z-20 {
   z-index: 20;
+}
+.z-10 {
+  z-index: 10;
 }
 .m-auto {
   margin: auto;
@@ -791,6 +791,14 @@ input[type="range"]::-ms-fill-lower {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
@@ -834,6 +842,9 @@ input[type="range"]::-ms-fill-lower {
 .mr-2 {
   margin-right: 0.5rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -869,6 +880,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .h-6 {
   height: 1.5rem;
+}
+.h-20 {
+  height: 5rem;
 }
 .h-screen {
   height: 100vh;
@@ -912,6 +926,9 @@ input[type="range"]::-ms-fill-lower {
 .w-6 {
   width: 1.5rem;
 }
+.w-20 {
+  width: 5rem;
+}
 .w-_500 {
   width: 500px;
 }
@@ -923,6 +940,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .w-60 {
   width: 15rem;
+}
+.w-_102 {
+  width: 102px;
 }
 .max-w-_1140 {
   max-width: 1140px;
@@ -995,6 +1015,9 @@ input[type="range"]::-ms-fill-lower {
 .gap-9 {
   gap: 2.25rem;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
 .gap-x-7 {
   column-gap: 1.75rem;
 }
@@ -1007,11 +1030,17 @@ input[type="range"]::-ms-fill-lower {
 .rounded-full {
   border-radius: 9999px;
 }
+.rounded-md {
+  border-radius: 0.375rem;
+}
 .rounded-_30 {
   border-radius: 30px;
 }
 .rounded-_6 {
   border-radius: 6px;
+}
+.border {
+  border-width: 1px;
 }
 .border-t {
   border-top-width: 1px;
@@ -1021,6 +1050,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .border-gray-300 {
   border-color: var(--gray-300);
+}
+.border-gray-600 {
+  border-color: var(--gray-600);
 }
 .border-gray-200 {
   border-color: var(--gray-200);
@@ -1038,6 +1070,9 @@ input[type="range"]::-ms-fill-lower {
 .bg-gray-500 {
   background-color: var(--gray-500);
 }
+.bg-gray-200 {
+  background-color: var(--gray-200);
+}
 .bg-gray-400 {
   background-color: var(--gray-400);
 }
@@ -1051,14 +1086,6 @@ input[type="range"]::-ms-fill-lower {
 .bg-green-100 {
   background-color: var(--green-100);
 }
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 213 213 / var(--tw-bg-opacity));
-}
-.bg-purple-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(108 43 217 / var(--tw-bg-opacity));
-}
 .bg-hero-pattern {
   background-image: url('/public/img/Hero.png');
 }
@@ -1067,6 +1094,15 @@ input[type="range"]::-ms-fill-lower {
 }
 .bg-center {
   background-position: center;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -1095,6 +1131,14 @@ input[type="range"]::-ms-fill-lower {
 .py-11 {
   padding-top: 2.75rem;
   padding-bottom: 2.75rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
@@ -1146,6 +1190,14 @@ input[type="range"]::-ms-fill-lower {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .font-semibold {
   font-weight: 600;
 }
@@ -1176,6 +1228,9 @@ input[type="range"]::-ms-fill-lower {
 .text-red-100 {
   color: var(--red-100);
 }
+.text-gray-500 {
+  color: var(--gray-500);
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1187,26 +1242,21 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(249 128 128 / var(--tw-text-opacity));
 }
+.text-gray-300 {
+  color: var(--gray-300);
+}
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(63 131 248 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
-.opacity-50 {
-  opacity: 0.5;
+.opacity-30 {
+  opacity: 0.3;
 }
 .opacity-90 {
   opacity: 0.9;
-}
-.opacity-60 {
-  opacity: 0.6;
-}
-.opacity-70 {
-  opacity: 0.7;
-}
-.opacity-20 {
-  opacity: 0.2;
-}
-.opacity-30 {
-  opacity: 0.3;
 }
 .outline-none {
   outline: 2px solid transparent;
@@ -1239,6 +1289,7 @@ input[type="range"]::-ms-fill-lower {
   --gray-300: rgba(245, 241, 234, 1);
   --gray-400: rgba(255, 252, 249, 1);
   --gray-500: rgba(232, 228, 221, 1);
+  --gray-600: rgba(233, 233, 233, 1);
 
   /* Green */
   --green-100: rgba(71, 99, 78, 1);
