--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* overflow: hidden; */
 }
 body {
   font-family: "Fraunces", serif;
@@ -47,4 +46,18 @@ table tr th {
 table tr td {
   padding: 1rem;
   background-color: var(--gray-300);
+}
+
+* ::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--gray-400);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--gray-100);
+  border-radius: 50px;
 }
